// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`manifest > chrome: exact permissions and snapshot 1`] = `
{
  "action": {
    "default_icon": {
      "16": "icon/16.png",
      "32": "icon/32.png",
    },
    "default_title": "__MSG_extName__",
  },
  "background": {
    "service_worker": "background.js",
  },
  "default_locale": "en",
  "description": "__MSG_extDescription__",
  "host_permissions": [
    "https://api.openai.com/*",
    "https://api.anthropic.com/*",
    "https://generativelanguage.googleapis.com/*",
  ],
  "icons": {
    "128": "icon/128.png",
    "16": "icon/16.png",
    "32": "icon/32.png",
    "48": "icon/48.png",
    "96": "icon/96.png",
  },
  "manifest_version": 3,
  "minimum_chrome_version": "116",
  "name": "__MSG_extName__",
  "optional_host_permissions": [
    "<all_urls>",
  ],
  "permissions": [
    "storage",
    "sidePanel",
  ],
  "side_panel": {
    "default_path": "sidepanel.html",
  },
  "version": "0.1.0",
}
`;

exports[`manifest > firefox: exact permissions and snapshot 1`] = `
{
  "action": {
    "default_icon": {
      "16": "icon/16.png",
      "32": "icon/32.png",
    },
    "default_title": "__MSG_extName__",
  },
  "background": {
    "scripts": [
      "background.js",
    ],
  },
  "browser_specific_settings": {
    "gecko": {
      "data_collection_permissions": {
        "required": [
          "websiteContent",
          "browsingActivity",
        ],
      },
      "id": "browser-sidekick@wolffischer82.github.io",
      "strict_min_version": "140.0",
    },
  },
  "default_locale": "en",
  "description": "__MSG_extDescription__",
  "host_permissions": [
    "https://api.openai.com/*",
    "https://api.anthropic.com/*",
    "https://generativelanguage.googleapis.com/*",
  ],
  "icons": {
    "128": "icon/128.png",
    "16": "icon/16.png",
    "32": "icon/32.png",
    "48": "icon/48.png",
    "96": "icon/96.png",
  },
  "manifest_version": 3,
  "name": "__MSG_extName__",
  "optional_host_permissions": [
    "<all_urls>",
  ],
  "permissions": [
    "storage",
  ],
  "sidebar_action": {
    "default_icon": {
      "16": "icon/16.png",
      "32": "icon/32.png",
    },
    "default_panel": "sidepanel.html",
    "default_title": "__MSG_extName__",
    "open_at_install": false,
  },
  "version": "0.1.0",
}
`;
